made the first tab on the pubedit page into a form styled look rather than a table. Added some css to stop the wraping of the navigation tabs on the puedit page. chaged some alert()s to console.log()s.

--- a/icentral/src/main/webapp/css/icentral-beta.css
+++ b/icentral/src/main/webapp/css/icentral-beta.css
@@ -1520,3 +1520,11 @@ a.disabled {
   margin: 0 0 6px 0;
 }
 
+/*Additions by zack*/
+.yui-nav {
+white-space: nowrap;
+} 
+.top-padding{
+padding-top: 10px
+}
+
