--- a/icentral/src/main/webapp/css/icentral-test.css
+++ b/icentral/src/main/webapp/css/icentral-test.css
@@ -1517,4 +1517,13 @@ a.disabled {
 
 #dt-pag-nav {
   margin: 0 0 6px 0;
-}       
+}      
+
+
+/*Additions by zack*/
+.yui-nav {
+white-space: nowrap;
+} 
+.top-padding{
+padding-top: 10px
+}
