--- a/icentral/src/main/webapp/css/icentral.css
+++ b/icentral/src/main/webapp/css/icentral.css
@@ -1511,3 +1511,10 @@ a.disabled {
   margin: 0 0 6px 0;
 }
 
+/*Additions by zack*/
+.yui-nav {
+white-space: nowrap;
+} 
+.top-padding{
+padding-top: 10px
+}
